Org logo background removed

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         header .logo-image {
             /* UPDATED: Made logo taller and removed margin */
-            height: 175px;
+            height: 200px;
             margin-right: 0;
         }
 
@@ -391,7 +391,7 @@
     <header id="main-header">
         <div class="container">
             <a href="#" class="logo-group">
-                <img src="CMA Logo.jpg" alt="CMA Logo" class="logo-image">
+                <img src="CMA Logo.png" alt="CMA Logo" class="logo-image">
             </a>
             <nav>
                 <a href="#mission">Our Mission</a>
