TMU Chapter placeholder added

--- a/index.html
+++ b/index.html
@@ -496,9 +496,16 @@
                 </div>
                 
                 <div class="chapter-card coming-soon">
-                    <img src="McMaster Icon.jpg" alt="McMaster Chapter (Future)" style="width:150px; height:150px; border-radius:50%; object-fit:cover; border: 5px solid #aaa; margin-bottom: 20px; filter: grayscale(100%) opacity(0.6);">
+                    <img src="McMaster Icon.jpg" alt="McMaster University Chapter (Future)" style="width:150px; height:150px; border-radius:50%; object-fit:cover; border: 5px solid #aaa; margin-bottom: 20px; filter: grayscale(100%) opacity(0.6);">
                     <h3>McMaster University Chapter</h3>
                     <p>A future chapter is being planned for McMaster University alumni. Stay tuned for updates.</p>
+                    <span class="status">Future: 2026</span>
+                </div>
+
+                <div class="chapter-card coming-soon">
+                    <img src="TMU Icon.jpg" alt="Toronto Metropolitan University Chapter (Future)" style="width:150px; height:150px; border-radius:50%; object-fit:contain; border: 5px solid #aaa; margin-bottom: 20px; filter: grayscale(100%) opacity(0.6);">
+                    <h3>Toronto Metropolitan University Chapter</h3>
+                    <p>A future chapter is being planned for Toronto Metropolitan University alumni. Stay tuned for updates.</p>
                     <span class="status">Future: 2026</span>
                 </div>
 
